# segmented-vec

./: Cargo.toml  README.md
.github/workflows/: bench.yml  release.yml  test.yml
benches/: comparison.rs
src/: drain.rs  into_iter.rs  iter.rs  lib.rs  peek_mut.rs  raw_vec.rs  slice.rs  sort.rs  spec_extend.rs  spec_from_iter.rs
src/slice/: index.rs  iter.rs  mod.rs
tests/: comparison.rs
