[package]
name = "segmented-vec"
version = "0.2.2"
edition = "2021"
authors = ["ddwalias"]
description = "A vector with stable element addresses using segmented allocation and O(1) index-to-segment mapping"
license = "Apache-2.0"
repository = "https://github.com/ddwalias/segmented-vec"
documentation = "https://docs.rs/segmented-vec"
readme = "README.md"
keywords = [
  "vector",
  "stable-address",
  "data-structure",
  "segmented",
  "no-reallocation",
]
categories = ["data-structures", "no-std"]

[features]
ci = []

[dependencies]

[dev-dependencies]
criterion = "0.8.1"
rand = "0.9.2"

[[bench]]
name = "comparison"
harness = false
