[package]
name = "segmented-vec"
version = "0.2.3"
edition = "2021"
authors = ["ddwalias"]
description = "A vector with stable element addresses using segmented allocation and O(1) index-to-segment mapping"
license = "Apache-2.0"
repository = "https://github.com/ddwalias/segmented-vec"
documentation = "https://docs.rs/segmented-vec"
readme = "README.md"
keywords = [
  "vector",
  "stable-address",
  "data-structure",
  "segmented",
  "no-reallocation",
]
categories = ["data-structures", "no-std"]

[features]
ci = []

[dependencies]
allocator-api2 = "0.4.0"

[dev-dependencies]
divan = "0.1"
rand = "0.9.2"
quickcheck = "1.0"
quickcheck_macros = "1.0"
arbitrary = { version = "1.3", features = ["derive"] }
proptest = "1.4"

[[bench]]
name = "comparison"
harness = false
